Improves Jupyter notebook setting and usage of ModelZooRoot

--- a/docs/notebooks/perf_analysis/benchmark_data_types_perf_comparison.ipynb
+++ b/docs/notebooks/perf_analysis/benchmark_data_types_perf_comparison.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Get Platform Information "
+    "# Section 1: Display Platform Information "
    ]
   },
   {
@@ -33,6 +33,58 @@
     "# ignore all warning messages\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ACTION: Users should change the value of os.environ['ModelZooRoot'] according to their environment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "# If default path does not work, change ModelZooRoot path according to your environment\n",
+    "## USER INPUT\n",
+    "accuracy_only=False\n",
+    "current_path = os.getcwd()\n",
+    "os.environ['ModelZooRoot'] = current_path + \"/../../../\"\n",
+    "os.environ['ProfileUtilsRoot'] = os.environ['ModelZooRoot'] + \"docs/notebooks/perf_analysis/profiling/\"\n",
+    "print(os.environ['ModelZooRoot'])\n",
+    "print(os.environ['ProfileUtilsRoot'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Check for mandatory python scripts after ModelZooRoot and ProfileUtilsRoot are assigned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "current_path = os.getcwd()\n",
+    "benchmark_path = os.environ['ModelZooRoot'] + \"benchmarks/launch_benchmark.py\"\n",
+    "if os.path.exists(benchmark_path) == True:\n",
+    "    print(benchmark_path)\n",
+    "else:\n",
+    "    print(\"ERROR! Can't find benchmark script!\")\n",
+    "    \n",
+    "profile_utils_path = os.environ['ProfileUtilsRoot'] + \"profile_utils.py\"\n",
+    "if os.path.exists(profile_utils_path) == True:\n",
+    "    print(profile_utils_path)\n",
+    "else:\n",
+    "    print(\"ERROR! Can't find profile_utils script!\")"
    ]
   },
   {
@@ -50,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Section 1: Run the benchmark on the Intel TensorFlow "
+    "# Section 2: Run the benchmark on the Intel TensorFlow "
    ]
   },
   {
@@ -273,66 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4.1: Check mandatory file \"launch_benchmark.py\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### ACTION: Users should change the value of os.environ['ModelZooRoot'] according to their environment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "# Users should change ModelZooRoot path according to their environment\n",
-    "## USER INPUT\n",
-    "accuracy_only=False\n",
-    "current_path = os.getcwd()\n",
-    "os.environ['ModelZooRoot'] = current_path + \"/../../../\"\n",
-    "os.environ['ProfileUtilsRoot'] = os.environ['ModelZooRoot'] + \"docs/notebooks/perf_analysis/profiling/\"\n",
-    "print(os.environ['ModelZooRoot'])\n",
-    "print(os.environ['ProfileUtilsRoot'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Check those mandatory python scripts after users assign ModelZooRoot and ProfileUtilsRoot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "current_path = os.getcwd()\n",
-    "benchmark_path = os.environ['ModelZooRoot'] + \"benchmarks/launch_benchmark.py\"\n",
-    "if os.path.exists(benchmark_path) == True:\n",
-    "    print(benchmark_path)\n",
-    "else:\n",
-    "    print(\"ERROR! Can't find benchmark script!\")\n",
-    "    \n",
-    "profile_utils_path = os.environ['ProfileUtilsRoot'] + \"profile_utils.py\"\n",
-    "if os.path.exists(profile_utils_path) == True:\n",
-    "    print(profile_utils_path)\n",
-    "else:\n",
-    "    print(\"ERROR! Can't find profile_utils script!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Import Model Zoo CPU info"
+    "### Step 4.1: Import Model Zoo CPU info"
    ]
   },
   {
