--- a/docs/notebooks/perf_analysis/benchmark_perf_comparison.ipynb
+++ b/docs/notebooks/perf_analysis/benchmark_perf_comparison.ipynb
@@ -21,7 +21,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Get Platform Information "
+    "<a id='section_1'></a>\n",
+    "# Section 1: Display Platform Information "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ignore all warning messages\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ACTION: Users should change the value of os.environ['ModelZooRoot'] according to their environment"
    ]
   },
   {
@@ -30,9 +49,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ignore all warning messages\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "import os\n",
+    "# If default path does not work, change ModelZooRoot path according to your environment\n",
+    "## USER INPUT\n",
+    "current_path = os.getcwd()\n",
+    "os.environ['ModelZooRoot'] = current_path + \"/../../../\"\n",
+    "os.environ['ProfileUtilsRoot'] = os.environ['ModelZooRoot'] + \"docs/notebooks/perf_analysis/profiling/\"\n",
+    "print(os.environ['ModelZooRoot'])\n",
+    "print(os.environ['ProfileUtilsRoot'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Check for mandatory python scripts after ModelZooRoot and ProfileUtilsRoot are assigned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "current_path = os.getcwd()\n",
+    "benchmark_path = os.environ['ModelZooRoot'] + \"benchmarks/launch_benchmark.py\"\n",
+    "if os.path.exists(benchmark_path) == True:\n",
+    "    print(benchmark_path)\n",
+    "else:\n",
+    "    print(\"ERROR! Can't find benchmark script!\")\n",
+    "    \n",
+    "profile_utils_path = os.environ['ProfileUtilsRoot'] + \"profile_utils.py\"\n",
+    "if os.path.exists(profile_utils_path) == True:\n",
+    "    print(profile_utils_path)\n",
+    "else:\n",
+    "    print(\"ERROR! Can't find profile_utils script!\")"
    ]
   },
   {
@@ -50,8 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='section_1'></a>\n",
-    "# Section 1: Run the benchmark on the selected Jupyter Kernels"
+    "# Section 2: Run the benchmark on the selected Jupyter Kernels"
    ]
   },
   {
@@ -157,65 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2.2: Check mandatory file \"launch_benchmark.py\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### ACTION: Users should change the value of os.environ['ModelZooRoot'] according to their environment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "# Users should change ModelZooRoot path according to their environment\n",
-    "## USER INPUT\n",
-    "current_path = os.getcwd()\n",
-    "os.environ['ModelZooRoot'] = current_path + \"/../../../\"\n",
-    "os.environ['ProfileUtilsRoot'] = os.environ['ModelZooRoot'] + \"docs/notebooks/perf_analysis/profiling/\"\n",
-    "print(os.environ['ModelZooRoot'])\n",
-    "print(os.environ['ProfileUtilsRoot'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Check those mandatory python scripts after users assign ModelZooRoot and ProfileUtilsRoot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "current_path = os.getcwd()\n",
-    "benchmark_path = os.environ['ModelZooRoot'] + \"benchmarks/launch_benchmark.py\"\n",
-    "if os.path.exists(benchmark_path) == True:\n",
-    "    print(benchmark_path)\n",
-    "else:\n",
-    "    print(\"ERROR! Can't find benchmark script!\")\n",
-    "    \n",
-    "profile_utils_path = os.environ['ProfileUtilsRoot'] + \"profile_utils.py\"\n",
-    "if os.path.exists(profile_utils_path) == True:\n",
-    "    print(profile_utils_path)\n",
-    "else:\n",
-    "    print(\"ERROR! Can't find profile_utils script!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Import Model Zoo CPU info"
+    "### Step 2.3 Import Model Zoo CPU info"
    ]
   },
   {
@@ -233,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2.3: User can also manually set batch size and number of threads"
+    "### Step 2.4: User can also manually set batch size and number of threads"
    ]
   },
   {
@@ -600,7 +593,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Repeat Step 1 to Step 4 on different Jupyter kernel\n",
+    "## Repeat Sections 1 and 2 on different Jupyter kernel\n",
     "Users can find information in docs/notebooks/perf_analysis/README.md for switching among different Juypter kernels.  \n",
     "> Go back Section 1 by clicking the link : [Section 1](#section_1)."
    ]
@@ -609,8 +602,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 5: Draw the performance comparison diagram\n",
-    ">NOTE: Please go over Section 1 on different Jupyter kernel before comparison\n"
+    "# Section 3: Results\n",
+    "## Draw the performance comparison diagram\n",
+    ">NOTE: Please go over Sections 1 and 2 on different Jupyter kernel before comparison\n"
    ]
   },
   {
@@ -634,7 +628,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 6: Gather all generated Tensorflow Timeline Json files\n",
+    "## Gather all generated Tensorflow Timeline Json files\n",
     "Copy the timeline json file from benchmark folder to the Timeline folder with time information.\n",
     "Those Timeline files will be analyzed in another Jupyter notebook."
    ]
