Added code to check for running on a non-numa machine then use all the cores on the system.

--- a/docs/notebooks/perf_analysis/benchmark_perf_comparison.ipynb
+++ b/docs/notebooks/perf_analysis/benchmark_perf_comparison.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,8 +218,8 @@
    "outputs": [],
    "source": [
     "sys.path.append(os.environ['ModelZooRoot']+os.sep+'benchmarks/common/')\n",
-    "from platform_util import CPUInfo \n",
-    "cpu_info = CPUInfo()"
+    "from platform_util import PlatformUtil \n",
+    "cpu_info = PlatformUtil(\"\")"
    ]
   },
   {
@@ -235,12 +235,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import psutil\n",
-    "import subprocess\n",
     "import os\n",
-    "cpu_count = cpu_info.cores_per_socket\n",
-    "cpu_socket_count =  cpu_info.sockets\n",
-    "print(\"CPU count per socket:\" ,  cpu_count ,\" \\nSocket count:\",cpu_socket_count)"
+    "numa_nodes = cpu_info.numa_nodes\n",
+    "print(\"CPU count per socket:\" , cpu_info.cores_per_socket ,\" \\nSocket count:\", cpu_info.sockets, \" \\nNuma nodes:\",numa_nodes)\n",
+    "if numa_nodes > 0:\n",
+    "    socket_number = 1\n",
+    "    cpu_count = cpu_info.cores_per_socket\n",
+    "    inter_thread = 1\n",
+    "else:\n",
+    "    # on non-numa machine, we should use all the cores and don't use numactl\n",
+    "    socket_number = -1\n",
+    "    cpu_count = cpu_info.cores_per_socket * cpu_info.sockets\n",
+    "    inter_thread = cpu_info.sockets"
    ]
   },
   {
@@ -264,8 +270,8 @@
    "source": [
     "## USER INPUT\n",
     "thread_number=cpu_count \n",
-    "utilized_socket_number=1 #cpu_socket_count\n",
-    "num_inter_threads = utilized_socket_number\n",
+    "utilized_socket_number=socket_number\n",
+    "num_inter_threads = inter_thread\n",
     "num_intra_threads = thread_number\n",
     "batch_size=32\n",
     "log_folder=os.getcwd() + os.sep + \"logs\""
